--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@recipher/task": "^1.1.3",
     "@recipher/utility": "^1.0.1",
     "bluebird": "^3.0.0",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "stripe": "^4.15.1"
   },
   "devDependencies": {
     "@recipher/gulp": "^1.0.7",
