--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@recipher/task": "^1.1.3",
     "@recipher/utility": "^1.0.1",
     "bluebird": "^3.0.0",
+    "csv": "^1.1.1",
     "lodash": "^3.10.1",
     "lodash.uniqby": "^4.7.0",
     "stripe": "^4.15.1"
